GIT COMMIT to master_new01 Test

--- a/JPA-Spring-Project-NewBranch/src/main/resources/templates/save.html
+++ b/JPA-Spring-Project-NewBranch/src/main/resources/templates/save.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>save</title>
+    <title>회원가입</title>
 </head>
 <body>
 <!-- action 속성 : form에 작성한 데이터를 어디로 보낼지 지정 -->
