--- a/JPA-Spring-Project-NewBranch/src/main/resources/templates/index.html
+++ b/JPA-Spring-Project-NewBranch/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>INDEX</title>
 </head>
 <body>
     <h2>Hello Spring Boot</h2>
