--- a/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardIndex.html
+++ b/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardIndex.html
@@ -5,8 +5,9 @@
     <title>BoardIndex</title>
 </head>
 <body>
-  <button onclick="saveReq()">글 작성</button>
-  <a href="/board/save">글 작성 (링크)</a>
+  <button onclick="saveReq()">글작성</button>
+  <a href="/board/save">글작성(링크)</a>
+  <button onclick="listReq()">글목록</button>
 </body>
 <script>
 //  function saveReq() {
@@ -14,6 +15,9 @@
 //  }
   const saveReq = () => {
     location.href="/board/save";
+  }
+  const listReq = () => {
+    location.href="/board/";
   }
 </script>
 </html>
