--- a/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/list.html
+++ b/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/list.html
@@ -9,14 +9,15 @@
     <tr>
       <th>id</th>
       <th>title</th>
+      <th>title(||쓰지 않은 경우)</th>
       <th>writer</th>
       <th>date</th>
       <th>hits</th>
     </tr>
     <tr th:each="board: ${boardList}">
       <td th:text="${board.id}"></td>
-      <td><a href="@{|/board/${board.id}|}" th:text="${board.boardTitle}"></a></td>
-      <td><a href="@{/board/${board.id}}" th:text="${board.boardTitle}"></a></td>
+      <td><a th:href="@{|/board/${board.id}|}" th:text="${board.boardTitle}"></a></td>
+      <td><a th:href="@{/board/${board.id}}" th:text="${board.boardTitle}"></a></td>
       <td th:text="${board.boardWriter}"></td>
       <td th:text="*{#temporals.format(board.boardCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
       <td th:text="${board.boardHits}"></td>
