--- a/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/list.html
+++ b/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/list.html
@@ -9,7 +9,7 @@
     <tr>
       <th>id</th>
       <th>title</th>
-      <th>title(||쓰지 않은 경우)</th>
+<!--      <th>title(||쓰지 않은 경우)</th>-->
       <th>writer</th>
       <th>date</th>
       <th>hits</th>
@@ -17,9 +17,11 @@
     <tr th:each="board: ${boardList}">
       <td th:text="${board.id}"></td>
       <td><a th:href="@{|/board/${board.id}|}" th:text="${board.boardTitle}"></a></td>
-      <td><a th:href="@{/board/${board.id}}" th:text="${board.boardTitle}"></a></td>
+      <!-- |~| : thymeleaf 관련 자료 : 링크로 넘어갈 때 어떻게 잘못 넘어감... 그래서 ||로 감싸줘야함... ??? -->
+<!--      <td><a th:href="@{/board/${board.id}}" th:text="${board.boardTitle}"></a></td>-->
       <td th:text="${board.boardWriter}"></td>
       <td th:text="*{#temporals.format(board.boardCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
+      <!-- 시간 형식 설정 -->
       <td th:text="${board.boardHits}"></td>
     </tr>
   </table>
