--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/main.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/main.html
@@ -5,7 +5,8 @@
     <title>MAIN</title>
 </head>
 <body>
-  session 값 확인 : <p th:text="${session.loginEmail}"></p>
+  Login Email 확인 : <p th:text="${session.loginEmail}"></p>
+  Login Name 확인 : <p th:text="${session.loginName}"></p>
   <a href="/member/update">내 정보 수정하기</a>
   <a href="/member/logout">로그아웃</a>
   <a href="/board">게시판</a>
