--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/save.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/save.html
@@ -3,15 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <title>SAVE</title>
+    <style>
+    /* Header */
+    header {
+      background-color: #6772e5;
+      padding: 10px;
+    }
+    header h1 {
+      color: #fff;
+      font-size: 28px;
+    }
+    /* Navigation */
+    nav {
+      background-color: #fff;
+      border-bottom: 1px solid #d5d5d5;
+      padding: 10px;
+    }
+    nav a {
+      color: #6772e5;
+      text-decoration: none;
+      margin-right: 10px;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    /* Main content */
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 10px;
+    }
+    /* Footer */
+    footer {
+      background-color: #6772e5;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+    }
+    .submit-btn {
+        background-color: #5469d4;
+        color: #ffffff;
+        font-weight: bold;
+        border-radius: 3px;
+        height: 30px;
+        border: none;
+        cursor: pointer;
+        margin: 10px;
+    }
+    .submit-btn:hover {
+        background-color: #4455bb;
+    }
+  </style>
 </head>
 <body>
+<!-- Header -->
+<header>
+    <h1>JPA SPRING BOOT SITE</h1>
+</header>
+<!-- Navigation -->
+<nav>
+    <a href="/member/update">내 정보 수정하기</a>
+    <a href="/member/logout">로그아웃</a>
+    <a href="/board">게시판</a>
+</nav>
+<main>
 <!-- front 부분은 되도록 복사 붙여넣기 -->
 <form action="/board/save" method="post">
-    작성자 : <input type="text" name="boardWriter"> <br>
-    비밀번호 : <input type="text" name="boardPass"> <br>
-    제목 : <input type="text" name="boardTitle"> <br>
-    내용 : <textarea name="boardContents" col="30" rows="10"> </textarea> <br>
+    <table>
+        <tr>
+            <td>작성자 : </td>
+            <td><input type="text" name="boardWriter"></td>
+        </tr>
+        <tr>
+            <td>비밀번호 : </td>
+            <td><input type="text" name="boardPass"></td>
+        </tr>
+        <tr>
+            <td>제목 : </td>
+            <td><input type="text" name="boardTitle"></td>
+        </tr>
+        <tr>
+            <td>내용 : </td>
+            <td><textarea name="boardContents" col="30" rows="10"> </textarea></td>
+        </tr>
+    </table>
+<!--    <input type="text" name="boardWriter"> <br>-->
+<!--    <input type="text" name="boardPass"> <br>-->
+<!--    <input type="text" name="boardTitle"> <br>-->
+<!--    <textarea name="boardContents" col="30" rows="10"> </textarea> <br>-->
     <input type="submit" value="글작성">
 </form>
+</main>
+<!-- Footer -->
+<footer>
+    &copy; 2023 JSW. MYSITE
+</footer>
 </body>
 </html>
