--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/member/list.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/member/list.html
@@ -3,9 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <title>List</title>
+    <style>
+        /* Header */
+        header {
+          background-color: #6772e5;
+          padding: 10px;
+        }
+        header h1 {
+          color: #fff;
+          font-size: 28px;
+        }
+        /* Navigation */
+        nav {
+          background-color: #fff;
+          border-bottom: 1px solid #d5d5d5;
+          padding: 10px;
+        }
+        nav a {
+          color: #6772e5;
+          text-decoration: none;
+          margin-right: 10px;
+        }
+        nav a:hover {
+          text-decoration: underline;
+        }
+        /* Main content */
+        main {
+          max-width: 800px;
+          margin: 0 auto;
+          padding: 10px;
+        }
+        /* Footer */
+        footer {
+          background-color: #6772e5;
+          color: #fff;
+          padding: 10px;
+          text-align: center;
+        }
+        .submit-btn {
+            background-color: #5469d4;
+            color: #ffffff;
+            font-weight: bold;
+            border-radius: 3px;
+            height: 30px;
+            border: none;
+            cursor: pointer;
+            margin: 10px;
+        }
+        .submit-btn:hover {
+            background-color: #4455bb;
+        }
+    </style>
 </head>
 <body>
-    <h2>list.html</h2>
+<!-- Header -->
+<header>
+    <h1>JPA SPRING BOOT SITE</h1>
+</header>
+<!-- Navigation -->
+<nav>
+    <a href="/member/update">내 정보 수정하기</a>
+    <a href="/member/logout">로그아웃</a>
+    <a href="/board">게시판</a>
+</nav>
+<main>
+    <h2>MemberList</h2>
     <table>
         <tr>
             <th>id</th>
@@ -30,5 +92,10 @@
             </td>
         </tr>
     </table>
+</main>
+<!-- Footer -->
+<footer>
+    &copy; 2023 JSW. MYSITE
+</footer>
 </body>
 </html>
