Master GIT CSS DESIGN 수정 1차 완료

--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/save.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/save.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>SAVE</title>
@@ -72,7 +72,7 @@
     <table>
         <tr>
             <td>작성자 : </td>
-            <td><input type="text" name="boardWriter"></td>
+            <td><span th:text="${session.loginName}"></span></td>
         </tr>
         <tr>
             <td>비밀번호 : </td>
