--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/member/list.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/member/list.html
@@ -61,11 +61,11 @@
     <h1>JPA SPRING BOOT SITE</h1>
 </header>
 <!-- Navigation -->
-<nav>
-    <a href="/member/update">내 정보 수정하기</a>
-    <a href="/member/logout">로그아웃</a>
-    <a href="/board">게시판</a>
-</nav>
+<!--<nav>-->
+<!--    <a href="/member/update">내 정보 수정하기</a>-->
+<!--    <a href="/member/logout">로그아웃</a>-->
+<!--    <a href="/board">게시판</a>-->
+<!--</nav>-->
 <main>
     <h2>MemberList</h2>
     <table>
