Master GIT CSS DESIGN 수정 1차 완료 및 게시물 수정 후 목록 이동 시 발생 Error 해결

--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardDetail.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardDetail.html
@@ -106,7 +106,7 @@
     const listReq = () => {
         console.log("목록 요청");
         const page = [[${page}]]
-        location.href="/board/paging?page="+page;
+        location.href="/board/paging?page=1";
     }
     const updateReq = () => {
         console.log("수정 요청");
