--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardIndex.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardIndex.html
@@ -68,8 +68,8 @@
 </nav>
 <main>
   <button onclick="saveReq()">글작성</button>
-  <a href="/board/save">글작성(링크)</a>
-  <button onclick="listReq()">글목록</button>
+<!--  <a href="/board/save">글작성(링크)</a>-->
+<!--  <button onclick="listReq()">글목록</button>-->
   <button onclick="pagingReq()">페이징목록</button>
 </main>
 <!-- Footer -->
