--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardSave.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardSave.html
@@ -72,7 +72,7 @@
     <table>
         <tr>
             <td>작성자 : </td>
-            <td><span th:text="${session.loginName}"></span></td>
+            <td><input type="text" name="boardWriter"></span></td>
         </tr>
         <tr>
             <td>비밀번호 : </td>
