--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/member/login.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/member/login.html
@@ -102,7 +102,7 @@
         <input type="submit" value="로그인">
     </form>
     <div class="terms">
-        <a href="#">비밀번호 찾기</a> | <a href="#">회원 가입</a>
+        <!--a href="#">비밀번호 찾기</a> |--> <a href="/member/save">회원 가입</a>
     </div>
 </div>
 </body>
