--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/member/memberList.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/member/memberList.html
@@ -53,6 +53,87 @@
         .submit-btn:hover {
             background-color: #4455bb;
         }
+        h1 {
+            font-size: 30px;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: 300;
+            text-align: center;
+            margin-bottom: 15px;
+        }
+        table {
+            width: 100%;
+            table-layout: fixed;
+        }
+        .tbl-header {
+            background-color: #6772e5;
+        }
+        .tbl-content {
+            height: 300px;
+            overflow-x: auto;
+            margin-top: 0px;
+            border: none;
+        }
+        th {
+            padding: 20px 15px;
+            text-align: left;
+            font-weight: 500;
+            font-size: 12px;
+            color: #fff;
+            text-transform: uppercase;
+        }
+        td {
+            padding: 15px;
+            text-align: left;
+            vertical-align: middle;
+            font-weight: 300;
+            font-size: 12px;
+            color: #000;
+            border-bottom: solid 1px rgba(255,255,255,0.1);
+        }
+
+        /* custom scrollbar */
+        ::-webkit-scrollbar {
+            width: 6px;
+        }
+        ::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        }
+        ::-webkit-scrollbar-thumb {
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        }
+
+        /* demo styles */
+        body {
+
+            font-family: 'Roboto', sans-serif;
+        }
+        section {
+            margin: 50px;
+        }
+        .made-with-love {
+            margin-top: 40px;
+            padding: 10px;
+            clear: left;
+            text-align: center;
+            font-size: 10px;
+            font-family: arial;
+            color: #fff;
+        }
+        .made-with-love i {
+            font-style: normal;
+            color: #F50057;
+            font-size: 14px;
+            position: relative;
+            top: 2px;
+        }
+        .made-with-love a {
+            color: #fff;
+            text-decoration: none;
+        }
+        .made-with-love a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -68,30 +149,39 @@
 <!--</nav>-->
 <main>
     <h2>MemberList</h2>
-    <table>
-        <tr>
-            <th>id</th>
-            <th>memberEmail</th>
-            <th>memberPassword</th>
-            <th>memberName</th>
-            <th>상세조회</th>
-            <th>삭제</th>
-        </tr>
-        <tr th:each="member: ${memberList}">
-            <td th:text="${member.id}"></td>
-            <td th:text="${member.memberEmail}"></td>
-            <td th:text="${member.memberPassword}"></td>
-            <td th:text="${member.memberName}"></td>
-            <td>
-                <!-- query string /member?id=1
-                rest api /member/1 -->
-                <a th:href="@{|/member/${member.id}|}">조회</a>
-            </td>
-            <td>
-                <a th:href="@{|/member/delete/${member.id}|}">삭제</a>
-            </td>
-        </tr>
-    </table>
+    <div class="tbl-header">
+        <table cellpadding="0" cellspacing="0" border="0">
+            <thead>
+            <tr>
+                <th>id</th>
+                <th>memberEmail</th>
+                <th>memberPassword</th>
+                <th>memberName</th>
+                <th>상세조회</th>
+                <th>삭제</th>
+            </tr>
+            </thead>
+        </table>
+    </div>
+    <div class="tbl-content">
+        <table cellpadding="0" cellspacing="0" border="0">
+            <tbody>
+            <tr th:each="member: ${memberList}">
+                <td th:text="${member.id}"></td>
+                <td th:text="${member.memberEmail}"></td>
+                <td th:text="${member.memberPassword}"></td>
+                <td th:text="${member.memberName}"></td>
+                <td>
+                    <!-- query string /member?id=1
+                    rest api /member/1 -->
+                    <a th:href="@{|/member/${member.id}|}">조회</a>
+                </td>
+                <td>
+                    <a th:href="@{|/member/delete/${member.id}|}">삭제</a>
+                </td>
+            </tr>
+        </table>
+    </div>
 </main>
 <!-- Footer -->
 <footer>
