--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardPaging.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardPaging.html
@@ -6,39 +6,39 @@
     <style>
         /* Header */
         header {
-          background-color: #6772e5;
-          padding: 10px;
+            background-color: #6772e5;
+            padding: 10px;
         }
         header h1 {
-          color: #fff;
-          font-size: 28px;
+            color: #fff;
+            font-size: 28px;
         }
         /* Navigation */
         nav {
-          background-color: #fff;
-          border-bottom: 1px solid #d5d5d5;
-          padding: 10px;
+            background-color: #fff;
+            border-bottom: 1px solid #d5d5d5;
+            padding: 10px;
         }
         nav a {
-          color: #6772e5;
-          text-decoration: none;
-          margin-right: 10px;
+            color: #6772e5;
+            text-decoration: none;
+            margin-right: 10px;
         }
         nav a:hover {
-          text-decoration: underline;
+            text-decoration: underline;
         }
         /* Main content */
         main {
-          max-width: 800px;
-          margin: 0 auto;
-          padding: 10px;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 10px;
         }
         /* Footer */
         footer {
-          background-color: #6772e5;
-          color: #fff;
-          padding: 10px;
-          text-align: center;
+            background-color: #6772e5;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
         }
         .submit-btn {
             background-color: #5469d4;
@@ -72,6 +72,8 @@
             height: 300px;
             margin-top: 0px;
             border: none;
+            display: flex;
+            margin: 0 auto;
         }
         th {
             padding: 20px 15px;
@@ -89,6 +91,21 @@
             font-size: 12px;
             color: #000;
             border-bottom: solid 1px rgba(255,255,255,0.1);
+        }
+        .page {
+            height: 50px;
+            /* 수평 중앙 정렬하기 */
+            margin: 20px;
+            text-align: center;
+            align: center;
+        }
+        .paging {
+            weight: 20px;
+            height: 20px;
+            color: #000;
+            /* 수직 중앙 정렬하기 */
+            margin: 10px;
+            top: 50%;
         }
         /* demo styles */
         body {
@@ -166,42 +183,45 @@
             </thead>
         </table>
     </div>
-    <div class="tbl-content">
+    <div class="tbl-content" >
         <table cellpadding="0" cellspacing="0" border="0">
             <tbody>
-            <tr th:each="board: ${boardList}">
-                <td th:text="${board.id}"></td>
-                <td><a th:href="@{|/board/${board.id}|(page=${boardList.number + 1})}" th:text="${board.boardTitle}"></a></td>
-                <td th:text="${board.boardWriter}"></td>
-                <td th:text="*{#temporals.format(board.boardCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                <!-- 시간 형식 설정 -->
-                <td th:text="${board.boardHits}"></td>
-            </tr>
+                <tr th:each="board: ${boardList}">
+                    <td th:text="${board.id}"></td>
+                    <td><a th:href="@{|/board/${board.id}|(page=${boardList.number + 1})}" th:text="${board.boardTitle}"></a></td>
+                    <td th:text="${board.boardWriter}"></td>
+                    <td th:text="*{#temporals.format(board.boardCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                    <!-- 시간 형식 설정 -->
+                    <td th:text="${board.boardHits}"></td>
+                </tr>
+            </tbody>
         </table>
     </div>
-<!-- 첫번째 페이지로 이동 -->
-<!-- /board/paging?page=1 -->
-<a th:href="@{/board/paging(page=1)}">First</a>
-<!-- 이전 링크 활성화 비활성화 -->
-<!-- boardList.getNumber() 사용자:2페이지 getNumber()=1 -->
-<a th:href="${boardList.first} ? '#' : @{/board/paging(page=${boardList.number})}">prev</a>
+    <div class="page">
+        <!-- 첫번째 페이지로 이동 -->
+        <!-- /board/paging?page=1 -->
+        <a class="paging" th:href="@{/board/paging(page=1)}">처음</a>
+        <!-- 이전 링크 활성화 비활성화 -->
+        <!-- boardList.getNumber() 사용자:2페이지 getNumber()=1 -->
+        <a class="paging" th:href="${boardList.first} ? '#' : @{/board/paging(page=${boardList.number})}">이전</a>
 
-<!-- 페이지 번호 링크(현재 페이지는 숫자만)
-        for(int page=startPage; page<=endPage; page++)-->
-<span th:each="page: ${#numbers.sequence(startPage, endPage)}">
-<!-- 현재페이지는 링크 없이 숫자만 -->
-    <span th:if="${page == boardList.number + 1}" th:text="${page}"></span>
-  <!-- 현재페이지 번호가 아닌 다른 페이지번호에는 링크를 보여줌 -->
-    <span th:unless="${page == boardList.number + 1}">
-        <a th:href="@{/board/paging(page=${page})}" th:text="${page}"></a>
-    </span>
-</span>
+        <!-- 페이지 번호 링크(현재 페이지는 숫자만)
+                for(int page=startPage; page<=endPage; page++)-->
+        <span class="page" th:each="page: ${#numbers.sequence(startPage, endPage)}">
+        <!-- 현재페이지는 링크 없이 숫자만 -->
+            <span th:if="${page == boardList.number + 1}" th:text="${page}"></span>
+            <!-- 현재페이지 번호가 아닌 다른 페이지번호에는 링크를 보여줌 -->
+            <span th:unless="${page == boardList.number + 1}">
+                <a th:href="@{/board/paging(page=${page})}" th:text="${page}"></a>
+            </span>
+        </span>
 
-<!-- 다음 링크 활성화 비활성화
-    사용자: 2페이지, getNumber: 1, 3페이지-->
-<a th:href="${boardList.last} ? '#' : @{/board/paging(page=${boardList.number + 2})}">next</a>
-<!-- 마지막 페이지로 이동 -->
-<a th:href="@{/board/paging(page=${boardList.totalPages})}">Last</a>
+        <!-- 다음 링크 활성화 비활성화
+            사용자: 2페이지, getNumber: 1, 3페이지-->
+        <a class="paging" th:href="${boardList.last} ? '#' : @{/board/paging(page=${boardList.number + 2})}">다음</a>
+        <!-- 마지막 페이지로 이동 -->
+        <a class="paging" th:href="@{/board/paging(page=${boardList.totalPages})}">끝</a>
+    </div>
 
 </main>
 <!-- Footer -->
