--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardSave.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardSave.html
@@ -48,7 +48,7 @@
         height: 30px;
         border: none;
         cursor: pointer;
-        margin: 10px;
+        margin: 0 auto;
     }
     .submit-btn:hover {
         background-color: #4455bb;
