--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/member/memberSave.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/member/memberSave.html
@@ -47,6 +47,8 @@
             font-size: 16px;
             margin-top: 20px;
             cursor: pointer;
+            text-align: center;
+            align: center;
         }
         input[type="submit"]:hover {
             background-color: #5249d3;
@@ -80,7 +82,10 @@
         이름
         <input type="text" name="memberName">
     </label>
-    <input type="submit" value="회원가입">
+    <div style="display: flex; justify-content: center; align-items: center;">
+        <input type="submit" value="회원가입">
+    </div>
+
 
 </form>
 </body>
