--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardSave.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardSave.html
@@ -69,6 +69,7 @@
 <main>
 <!-- front 부분은 되도록 복사 붙여넣기 -->
 <form action="/board/save" method="post">
+    <div class="tbl-content">
     <table>
         <tr>
             <td>작성자 : </td>
@@ -87,6 +88,7 @@
             <td><textarea name="boardContents" col="30" rows="10"> </textarea></td>
         </tr>
     </table>
+    </div>
 <!--    <input type="text" name="boardWriter"> <br>-->
 <!--    <input type="text" name="boardPass"> <br>-->
 <!--    <input type="text" name="boardTitle"> <br>-->
