게시판 update 오류 해결 완료 -> 게시판 수정 시 비밀번호 다르게 해도 수정 됨 [해결 필요]

--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/ajaxTest/ajax-ex-01.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/ajaxTest/ajax-ex-01.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>AJAX ex01</title>
+    <!-- jQuery CDN 주소 -->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+        crossorigin="anonymous">
+    </script>
 </head>
 <body>
-
+    <button onclick="ex01Fn()">ex01 함수 호출</button>
 </body>
+<script>
+    const ex01Fn = () => {
+        $.ajax({
+            // 요청 방식 : get
+            // 요청 주소 : /ex01
+            type: "get",
+            url: "/ex01",
+            // 요청 성공 했을 때 실행 되는 부분
+            success: function(res) {
+                console.log("성공", res);
+            }
+            // 요청이 실패했을 때 실행되는 부분
+            error: function() {
+                console.log("실패");
+            }
+        })
+    }
+</script>
 </html>
