--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardUpdate.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardUpdate.html
@@ -68,25 +68,25 @@
 </nav>
 <main>
 <form action="/board/update" method="post" name="updateForm">
-  <input type="hidden" name="id" th:value="${boardUpdate.id}">
-  작성자 : <input type="text" name="boardWriter" th:value="${boardUpdate.boardWriter}" readonly> <br>
-  비밀번호 : <input type="text" name="boardPass" id="boardPass"> <br>
-  제목 : <input type="text" name="boardTitle" th:value="${boardUpdate.boardTitle}"> <br>
-  내용 : <textarea name="boardContents" col="30" rows="10" th:value="${boardUpdate.boardContents}"></textarea> <br>
-  <input type="hidden" name="boardHits" th:value="${boardUpdate.boardHits}">
-  <input type="submit" value="글작성">
+    <input type="hidden" name="id" th:value="${boardUpdate.id}">
+    작성자 : <input type="text" name="boardWriter" th:value="${boardUpdate.boardWriter}" readonly> <br>
+    비밀번호 : <input type="text" name="boardPass" id="boardPass"> <br>
+    제목 : <input type="text" name="boardTitle" th:value="${boardUpdate.boardTitle}"> <br>
+    내용 : <textarea name="boardContents" col="30" rows="10" th:value="${boardUpdate.boardContents}"></textarea> <br>
+    <input type="hidden" name="boardHits" th:value="${boardUpdate.boardHits}">
+    <input type="submit" value="글수정">
 </form>
-<script>
-  const boardUpdate = () => {
-    const pass = [[${boardUpdate.boardPass}]];
-    const inputPass = document.getElementById("boardPass").value;
-    if (pass == inputPass) {
-      document.updateForm.submit();
-    } else {
-      alert("비밀번호가 일치하지 않습니다!");
-    }
-  }
-</script>
+    <script th:inline="javascript">
+        const boardUpdate = () => {
+            const pass = [[${boardUpdate.boardPass}]];
+            const inputPass = document.getElementById("boardPass").value;
+            if (pass == inputPass) {
+                document.updateForm.submit();
+            } else {
+                alert("비밀번호가 일치하지 않습니다!");
+            }
+        }
+    </script>
 </main>
 <!-- Footer -->
 <footer>
