--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardPaging.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardPaging.html
@@ -8,6 +8,7 @@
         header {
             background-color: #6772e5;
             padding: 10px;
+            width: 100%;
         }
         header h1 {
             color: #fff;
@@ -18,6 +19,7 @@
             background-color: #fff;
             border-bottom: 1px solid #d5d5d5;
             padding: 10px;
+            width: 100%;
         }
         nav a {
             color: #6772e5;
@@ -39,6 +41,11 @@
             color: #fff;
             padding: 10px;
             text-align: center;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 40px; /* footer의 높이 설정 */
+            line-height: 40px;
         }
         .submit-btn {
             background-color: #5469d4;
@@ -68,13 +75,6 @@
         .tbl-header {
             background-color: #6772e5;
         }
-        .tbl-content {
-            height: 300px;
-            margin-top: 0px;
-            border: none;
-            display: flex;
-            margin: 0 auto;
-        }
         th {
             padding: 20px 15px;
             text-align: left;
@@ -93,25 +93,71 @@
             border-bottom: solid 1px rgba(255,255,255,0.1);
         }
         .page {
-            height: 50px;
+            display: inline-block;
+            margin: 0 5px;
+            display: flex;
+            justify-content: center;
             /* 수평 중앙 정렬하기 */
             margin: 20px;
             text-align: center;
             align: center;
         }
+
         .paging {
-            weight: 20px;
-            height: 20px;
-            color: #000;
+            padding: 5px 10px;
+            background-color: #5469d4;
+            color: #ffffff;
+            text-decoration: none;
+            border-radius: 3px;
             /* 수직 중앙 정렬하기 */
             margin: 10px;
             top: 50%;
         }
+        .paging:hover {
+            background-color: #6772e5;
+        }
+
+        .paging.disabled {
+            background-color: #cccccc;
+            pointer-events: none;
+        }
         /* demo styles */
         body {
-
+            font-family: sans-serif;
             font-family: 'Roboto', sans-serif;
+            position: relative;
+            min-height: 100vh;
+            margin: 0;
+            width: 100%;
+            padding-bottom: 40px; /* footer의 높이 만큼 여백 추가 */
         }
+        /* 날짜 형식 */
+        .tbl-content td[style^="width"]:nth-child(4) {
+            font-family: monospace;
+        }
+        .tbl-header th,
+        .tbl-content td {
+            padding: 8px;
+            text-align: left;
+        }
+        .tbl-content {
+            height: 300px;
+            margin-top: 0px;
+            border: none;
+            display: flex;
+            margin: 0 auto;
+        }
+        .tbl-header table {
+            background-color: #5469d4;
+            color: #ffffff;
+        }
+
+        .tbl-content table {
+            background-color: #ffffff;
+            color: #4455bb;
+        }
+
+
         section {
             margin: 50px;
         }
@@ -170,29 +216,28 @@
 <!--  </tr>-->
 <!--</table>-->
     <div class="tbl-header">
-        <table cellpadding="0" cellspacing="0" border="0">
+        <table cellpadding="0" cellspacing="0" border="0" style="width: 100%">
             <thead>
             <tr>
-                <th>id</th>
-                <th>title</th>
-                <th>writer</th>
-                <th>date</th>
-                <th>hits</th>
+                <th style="width: 10%">id</th>
+                <th style="width: 25%">title</th>
+                <th style="width: 25%">writer</th>
+                <th style="width: 20%">date</th>
+                <th style="width: 10%">hits</th>
             </tr>
             </thead>
         </table>
     </div>
-    <div class="tbl-content" >
-        <table cellpadding="0" cellspacing="0" border="0">
+    <div class="tbl-content">
+        <table cellpadding="0" cellspacing="0" border="0" style="width: 100%">
             <tbody>
-                <tr th:each="board: ${boardList}">
-                    <td th:text="${board.id}"></td>
-                    <td><a th:href="@{|/board/${board.id}|(page=${boardList.number + 1})}" th:text="${board.boardTitle}"></a></td>
-                    <td th:text="${board.boardWriter}"></td>
-                    <td th:text="*{#temporals.format(board.boardCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                    <!-- 시간 형식 설정 -->
-                    <td th:text="${board.boardHits}"></td>
-                </tr>
+            <tr th:each="board: ${boardList}">
+                <td style="width: 10%" th:text="${board.id}"></td>
+                <td style="width: 25%"><a th:href="@{|/board/${board.id}|(page=${boardList.number + 1})}" th:text="${board.boardTitle}"></a></td>
+                <td style="width: 25%" th:text="${board.boardWriter}"></td>
+                <td style="width: 20%" th:text="*{#temporals.format(board.boardCreatedTime, 'yyyy.MM.dd HH:mm:ss')}"></td>
+                <td style="width: 10%" th:text="${board.boardHits}"></td>
+            </tr>
             </tbody>
         </table>
     </div>
