--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardSave.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardSave.html
@@ -33,6 +33,52 @@
         margin: 0 auto;
         padding: 10px;
     }
+    .tbl-form {
+        width: 100%;
+        border-collapse: collapse;
+        background-color: #5469d4;
+        color: #ffffff;
+    }
+
+    .tbl-form th {
+        width: 20%;
+        padding: 8px;
+        text-align: left;
+        border: 1px solid #6772e5;
+        background-color: #4455bb;
+    }
+
+    .tbl-form td {
+        width: 80%;
+        padding: 8px;
+        text-align: left;
+        border: 1px solid #6772e5;
+        background-color: #ffffff;
+        color: #ffffff;
+    }
+    .tbl-form td:first-child {
+        width: 20%;
+        background-color: #4455bb;
+    }
+    .tbl-form input[type="text"],
+    .tbl-form textarea {
+        width: 80%;
+        padding: 8px;
+        border: 1px solid #6772e5;
+        border-radius: 4px;
+        margin-bottom: 10px;
+    }
+
+    .tbl-form .submit-btn {
+        background-color: #5469d4;
+        color: #ffffff;
+        font-weight: bold;
+        border-radius: 3px;
+        height: 30px;
+        border: none;
+        cursor: pointer;
+        margin: 20px;
+    }
     /* Footer */
     footer {
         background-color: #6772e5;
@@ -70,24 +116,25 @@
 <!-- front 부분은 되도록 복사 붙여넣기 -->
 <form action="/board/save" method="post">
     <div class="tbl-content">
-    <table>
-        <tr>
-            <td>작성자 : </td>
-            <td><input type="text" name="boardWriter"></span></td>
-        </tr>
-        <tr>
-            <td>비밀번호 : </td>
-            <td><input type="text" name="boardPass"></td>
-        </tr>
-        <tr>
-            <td>제목 : </td>
-            <td><input type="text" name="boardTitle"></td>
-        </tr>
-        <tr>
-            <td>내용 : </td>
-            <td><textarea name="boardContents" col="30" rows="10"> </textarea></td>
-        </tr>
-    </table>
+        <table class="tbl-form">
+            <tr>
+                <td>작성자 :</td>
+                <td><input type="text" name="boardWriter"></td>
+            </tr>
+            <tr>
+                <td>비밀번호 :</td>
+                <td><input type="text" name="boardPass"></td>
+            </tr>
+            <tr>
+                <td>제목 :</td>
+                <td><input type="text" name="boardTitle"></td>
+            </tr>
+            <tr>
+                <td>내용 :</td>
+                <td><textarea name="boardContents" col="30" rows="10"></textarea></td>
+            </tr>
+        </table>
+
     </div>
 <!--    <input type="text" name="boardWriter"> <br>-->
 <!--    <input type="text" name="boardPass"> <br>-->
