[ 수정 정보 ] 1) 로그인 정보 불일치 alert 창 생성 [ 오류 해결 및 수정 필요 목록 ] 1) 회원정보 수정 창 500 에러 뜸 -> 확인 필요 2) 게시판 입력 창에서 작성자에 로그인한 userEmail이 뜨도록 수정하기 3) 게시판 수정 창에서 설정한 비밀번호가 다르면 수정이 안 되도록 수정하기 4) 회원 정보는 관리자 계정이 아니면 뜨지 않도록 수정 4-1) 관리자 계정 생성 5) 로그인 비밀번호 찾기 5-1) 로그인 이메일 찾기 5-2) 비밀번호 계정 맞으면 수정 가능하도록 하기 6) 페이징 게시판 UI 수정하기

--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardSave.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardSave.html
@@ -69,16 +69,16 @@
         margin-bottom: 10px;
     }
 
-    .tbl-form .submit-btn {
-        background-color: #5469d4;
-        color: #ffffff;
-        font-weight: bold;
-        border-radius: 3px;
-        height: 30px;
-        border: none;
-        cursor: pointer;
-        margin: 20px;
-    }
+<!--    .tbl-form .submit-btn {-->
+<!--        background-color: #5469d4;-->
+<!--        color: #ffffff;-->
+<!--        font-weight: bold;-->
+<!--        border-radius: 3px;-->
+<!--        height: 30px;-->
+<!--        border: none;-->
+<!--        cursor: pointer;-->
+<!--        margin: 20px;-->
+<!--    }-->
     /* Footer */
     footer {
         background-color: #6772e5;
@@ -95,6 +95,8 @@
         border: none;
         cursor: pointer;
         margin: 0 auto;
+        display: flex;
+        justify-content: center;
     }
     .submit-btn:hover {
         background-color: #4455bb;
@@ -120,6 +122,7 @@
             <tr>
                 <td>작성자 :</td>
                 <td><input type="text" name="boardWriter"></td>
+<!--                <td><input type="text" th:value="${updateMember.memberEmail}" name="memberEmail" readonly></td>-->
             </tr>
             <tr>
                 <td>비밀번호 :</td>
@@ -136,11 +139,14 @@
         </table>
 
     </div>
+    <br>
+    <br>
 <!--    <input type="text" name="boardWriter"> <br>-->
 <!--    <input type="text" name="boardPass"> <br>-->
 <!--    <input type="text" name="boardTitle"> <br>-->
 <!--    <textarea name="boardContents" col="30" rows="10"> </textarea> <br>-->
     <input class="submit-btn" type="submit" value="글작성">
+    <br>
 </form>
 </main>
 <!-- Footer -->
