JSP 페이지 화면 뜨는 것 확인 완료

--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/main.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/main.html
@@ -52,6 +52,13 @@
     <a href="/member/update">내 정보 수정하기</a>
     <a href="/member/logout">로그아웃</a>
     <a href="/board">게시판</a>
+    <a href="/board">To-Do List</a>
+    <a href="/board">쇼핑몰 사이트</a>
+    <a href="/board">블로그 사이트</a>
+    <a href="/board">방명록 사이트</a>
+    <a href="/board">채팅 어플리케이션</a>
+    <a href="/board">인스타그램 클론 코딩</a>
+    <a href="/board">마이페이지</a>
 </nav>
 <!-- Main content -->
 <main>
