--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardSave.html
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/templates/board/boardSave.html
@@ -113,6 +113,13 @@
     <a href="/member/update">내 정보 수정하기</a>
     <a href="/member/logout">로그아웃</a>
     <a href="/board">게시판</a>
+    <a href="/board">To-Do List</a>
+    <a href="/board">쇼핑몰 사이트</a>
+    <a href="/board">블로그 사이트</a>
+    <a href="/board">방명록 사이트</a>
+    <a href="/board">채팅 어플리케이션</a>
+    <a href="/board">인스타그램 클론 코딩</a>
+    <a href="/board">마이페이지</a>
 </nav>
 <main>
 <!-- front 부분은 되도록 복사 붙여넣기 -->
@@ -120,20 +127,20 @@
     <div class="tbl-content">
         <table class="tbl-form">
             <tr>
-                <td>작성자 :</td>
+                <td>작성자</td>
                 <td><input type="text" name="boardWriter"></td>
 <!--                <td><input type="text" th:value="${updateMember.memberEmail}" name="memberEmail" readonly></td>-->
             </tr>
             <tr>
-                <td>비밀번호 :</td>
-                <td><input type="text" name="boardPass"></td>
+                <td>비밀번호</td>
+                <td><input type="password"  name="boardPass"></td>
             </tr>
             <tr>
-                <td>제목 :</td>
+                <td>제목</td>
                 <td><input type="text" name="boardTitle"></td>
             </tr>
             <tr>
-                <td>내용 :</td>
+                <td>내용</td>
                 <td><textarea name="boardContents" col="30" rows="10"></textarea></td>
             </tr>
         </table>
